# ad

./: Cargo.toml
crates/ad_client/: Cargo.toml  README.md
crates/ad_client/examples/: event_filter.rs
crates/ad_client/src/: event.rs  lib.rs
crates/ad_event/: Cargo.toml  README.md
crates/ad_event/src/: lib.rs
crates/ad_lsp/: Cargo.toml
crates/ad_lsp/src/: client.rs  main.rs  msg.rs
crates/ad_repl/: Cargo.toml  README.md
crates/ad_repl/src/: main.rs
crates/ninep/: Cargo.toml  README.md
crates/ninep/examples/: server.rs
crates/ninep/src/: client.rs  lib.rs  server.rs  unix.rs
data/: help-template.txt
data/contrib/sh/: comment  sendtoRepl  uncomment
data/lib/: ad.sh
src/: config.rs  input.rs  lib.rs  log.rs  system.rs  trie.rs  util.rs  ziplist.rs
src/buffer/: buffers.rs  internal.rs  mod.rs
src/dot/: find.rs
src/editor/: actions.rs  built_in_commands.rs  commands.rs  minibuffer.rs  mod.rs  mouse.rs
src/exec/: addr.rs  cached_stdin.rs  char_iter.rs  mod.rs
src/fsys/: event.rs  mod.rs
src/lsp/: capabilities.rs  client.rs  lang.rs  messages.rs  mod.rs  msg.rs  notifications.rs  rpc.rs
src/mode/: insert.rs  mod.rs  normal.rs
src/regex/: matches.rs
src/ui/: layout.rs  lex.rs  mod.rs  tui.rs  windows.rs
