[package]
name = "ad_repl"
version = "0.1.0"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/ad"
documentation = "https://docs.rs/ad_repl"
readme = "README.md"
description = "A simple shell repl for the ad text editor"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "terminal", "editor", "text-editor", ]
categories = [ "development-tools", "text-editors", "command-line-utilities" ]

[dependencies]
ad_client = { version = "0.2", path = "../ad_client" }
subprocess = "0.2.9"
